FE: refactor(planung): remove unused PlanungSummary and PlanungTable components